--- a/Project0/Project0.DataInfrastructure/Project0.DataInfrastructure.csproj
+++ b/Project0/Project0.DataInfrastructure/Project0.DataInfrastructure.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project0.Logic\Project0.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
